how to initialize a container when size of initial elements is known